feat: add registration endpoint and db login support
